--- a/community-notes/community-notes-j2ee/pom.xml
+++ b/community-notes/community-notes-j2ee/pom.xml
@@ -63,6 +63,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		
+		<dependency>
+            <groupId>com.darwino</groupId>
+            <artifactId>dwo-jre-ibm-connections</artifactId>
+            <version>${DARWINO_VERSION}</version>
+        </dependency>
+		
 	</dependencies>
 	
 	<dependencyManagement>
